{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 26,
  "lineage": "6dad1887-82e0-1a54-0983-94814e092ab2",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0498b61a6ff756faf",
            "arn": "arn:aws:ec2:ap-south-1:465362303741:elastic-ip/eipalloc-0498b61a6ff756faf",
            "association_id": "eipassoc-0ef43082ee0343a53",
            "domain": "vpc",
            "id": "eipalloc-0498b61a6ff756faf",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-04dd2ff266ec00fc6",
            "private_dns": "ip-10-0-1-238.ap-south-1.compute.internal",
            "private_ip": "10.0.1.238",
            "public_dns": "ec2-13-206-112-115.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.206.112.115",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-nat-eip"
            },
            "tags_all": {
              "Name": "dev-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "eipalloc-0498b61a6ff756faf",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465362303741:internet-gateway/igw-00478118c0ca48738",
            "id": "igw-00478118c0ca48738",
            "owner_id": "465362303741",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-041a3c3f994e2d967"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "igw-00478118c0ca48738",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0498b61a6ff756faf",
            "association_id": "eipassoc-0ef43082ee0343a53",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0001118d72041f227",
            "network_interface_id": "eni-04dd2ff266ec00fc6",
            "private_ip": "10.0.1.238",
            "public_ip": "13.206.112.115",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c47217b765bec94",
            "tags": {
              "Name": "dev-nat"
            },
            "tags_all": {
              "Name": "dev-nat"
            },
            "vpc_id": "vpc-041a3c3f994e2d967"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "nat-0001118d72041f227",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465362303741:route-table/rtb-04edd2bad4a93b404",
            "id": "rtb-04edd2bad4a93b404",
            "owner_id": "465362303741",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0001118d72041f227",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private-rt"
            },
            "tags_all": {
              "Name": "dev-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a3c3f994e2d967"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "rtb-04edd2bad4a93b404",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465362303741:route-table/rtb-094f201bd02190434",
            "id": "rtb-094f201bd02190434",
            "owner_id": "465362303741",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00478118c0ca48738",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-041a3c3f994e2d967"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "rtb-094f201bd02190434",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efcff622b8597bd7",
            "region": "ap-south-1",
            "route_table_id": "rtb-04edd2bad4a93b404",
            "subnet_id": "subnet-02cb6bf6627465668"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "rtbassoc-0efcff622b8597bd7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f82b657744af8a8",
            "region": "ap-south-1",
            "route_table_id": "rtb-04edd2bad4a93b404",
            "subnet_id": "subnet-0abffc82587ee301e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "rtbassoc-02f82b657744af8a8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a693e8fa21a47a5",
            "region": "ap-south-1",
            "route_table_id": "rtb-094f201bd02190434",
            "subnet_id": "subnet-08c47217b765bec94"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "rtbassoc-05a693e8fa21a47a5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02efb57226b8dab35",
            "region": "ap-south-1",
            "route_table_id": "rtb-094f201bd02190434",
            "subnet_id": "subnet-0ec34a66347d19257"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "rtbassoc-02efb57226b8dab35",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465362303741:subnet/subnet-02cb6bf6627465668",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cb6bf6627465668",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "465362303741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-private-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-041a3c3f994e2d967"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "subnet-02cb6bf6627465668",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465362303741:subnet/subnet-0abffc82587ee301e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abffc82587ee301e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "465362303741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dev-private-2",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-041a3c3f994e2d967"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "subnet-0abffc82587ee301e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465362303741:subnet/subnet-08c47217b765bec94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c47217b765bec94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "465362303741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-public-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-041a3c3f994e2d967"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "subnet-08c47217b765bec94",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465362303741:subnet/subnet-0ec34a66347d19257",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec34a66347d19257",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "465362303741",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dev-public-2",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-041a3c3f994e2d967"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "subnet-0ec34a66347d19257",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:465362303741:vpc/vpc-041a3c3f994e2d967",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb75332c8df74457",
            "default_route_table_id": "rtb-0de23bbfb1c73a6f2",
            "default_security_group_id": "sg-002e4b3e7944051e7",
            "dhcp_options_id": "dopt-029fd50bf1e52e8c1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041a3c3f994e2d967",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de23bbfb1c73a6f2",
            "owner_id": "465362303741",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "465362303741",
            "id": "vpc-041a3c3f994e2d967",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}